test/fails/bad_functions/parameterized1.lgl
tag a is vec3;
tag p<`t : vec3> is vec2;

`t<a> fail<`t : vec2>() { // Like, what does this even mean?  You can't parameterize an abstract type
    return [0., 0.];
}

void main() {
    print 1;
}