test/fails/bad_functions/parameterized1.expect
Fatal error: exception Failure("Parsing error at token '<', line 4, column 3")